// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Display display value increments in one when 'like' button is clicked 1`] = `
<div>
  <Display
    value={1}
  />
  <Controls
    handleClick={[Function]}
  />
</div>
`;

exports[`Component Display snapshot renders correctly 1`] = `
<div>
  <Display
    value={0}
  />
  <Controls
    handleClick={[Function]}
  />
</div>
`;
